Revert "resolved the remarks overflowing in studhomepage"
This reverts commit 66f0e976543d00fe2b28f90e10b6448f0c0dd1e5.

--- a/SIA FINAL PROJECT/css/studhome.css
+++ b/SIA FINAL PROJECT/css/studhome.css
@@ -410,7 +410,7 @@ footer{
   left: 80%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  max-width: 200px;
+  width: 200px;
 }
 
 .conductInfo {
@@ -419,19 +419,15 @@ footer{
   color: #f1f1f0;
   font-size: 20px;
   padding-left: 50px;
-  width: calc(100% - 60px); /* Adjust the width as needed */
-  display: block; /* Change from inline to block */
+  width: 50%;
+  display: inline;
   text-align: left;
   margin-left: 10px;
-  margin-bottom: 10px; /* Add some bottom margin for spacing */
   outline: none;
-  resize: none; /* Disable textarea resizing */
-  overflow-wrap: break-word;
-  align-self: flex-start; /* Align with the top of the container */
 }
 
 .lbl {
-  display: block;
+  display: inline-block;
   align-self: left;
   width: 100px;
   display: inline-block;
